Fix ftc api bug
